--- a/config/Clash/config-clash.yaml
+++ b/config/Clash/config-clash.yaml
@@ -1,7 +1,7 @@
 # url 里填写自己的订阅,名称不能重复
 proxy-providers:
   Airport_01:
-    url: "https://sub.fusir.top:6767/fusir/download/Mitce?target=ClashMeta"
+    url: "http://192.168.2.4:3001/fusir/download/Mitce?target=ClashMeta"
     type: http
     interval: 86400
     health-check: {enable: true,url: "https://www.gstatic.com/generate_204",interval: 300}
