--- a/config/Clash/config-openwrt-mihomo.yaml
+++ b/config/Clash/config-openwrt-mihomo.yaml
@@ -208,6 +208,10 @@ rules:
   - "RULE-SET,SteamCN,DIRECT"
   - "RULE-SET,GitHub,🌐 全部节点"
   - "RULE-SET,Microsoft,🌐 全部节点"
+  - "DOMAIN-SUFFIX,oray.com,DIRECT"
+  - "DOMAIN-SUFFIX,3322.net,DIRECT"
+  - "DOMAIN-SUFFIX,ipw.cn,DIRECT"
+  - "DOMAIN-SUFFIX,ipip.net,DIRECT"
   - "RULE-SET,Apple,DIRECT"
   - "RULE-SET,Telegram,🌐 全部节点"
   - "RULE-SET,Twitter,🌐 全部节点"
