--- a/config/Clash/config-mihomo.yaml
+++ b/config/Clash/config-mihomo.yaml
@@ -434,6 +434,9 @@ rules:
   - "RULE-SET,Netflix,🎥 Netflix"
   - "RULE-SET,ProxyMedia,🚀 节点选择"
   - "RULE-SET,ProxyGFWlist,🚀 节点选择"
+  - "DOMAIN-SUFFIX,fusir.top,DIRECT"
+  - "DOMAIN-SUFFIX,fusir.eu.org,DIRECT"
+  - "DOMAIN-SUFFIX,fusir.us.kg,DIRECT"
   - "RULE-SET,BilibiliHMT,🎯 全球直连"
   - "RULE-SET,Bilibili,🎯 全球直连"
   - "RULE-SET,ChinaMedia,🎯 全球直连"
